--- a/vignettes/LoadGenomicBreaks.Rmd
+++ b/vignettes/LoadGenomicBreaks.Rmd
@@ -331,11 +331,11 @@ Bridge regions
 We can pair the unaligned regions that are between two colinearly aligned regions.
 
 ```{r mappedUnaligned, cache = TRUE, dependson="GBreaks_object"}
-unalMap <- BiocParallel::bplapply(gbs, bridgeRegions) |> as("SimpleList")
+bri <- BiocParallel::bplapply(gbs, bridgeRegions) |> as("SimpleList")
 
-unalMap[Oik_Oik] <- BiocParallel::bplapply(unalMap[Oik_Oik], flagLongShort_, longShort)
-unalMap[Oik_Oik] <- annotateWithReps(unalMap[Oik_Oik], reps)
-unalMap[Oik_Oik] <- annotateWithTranscripts(unalMap[Oik_Oik], transcripts)
+bri[Oik_Oik] <- BiocParallel::bplapply(bri[Oik_Oik], flagLongShort_, longShort)
+bri[Oik_Oik] <- annotateWithReps(bri[Oik_Oik], reps)
+bri[Oik_Oik] <- annotateWithTranscripts(bri[Oik_Oik], transcripts)
 ```
 
 Translocated regions
@@ -432,7 +432,7 @@ bp_summary <-
     coa     = sapply(coa, length),
     unmap   = sapply(unmap, length),
     unmap2  = sapply(unmap2, length),
-    unalMap = sapply(unalMap, length),
+    bri = sapply(bri, length),
     tra     = sapply(tra, length),
     tra2    = sapply(tra2, length),
     coa2    = sapply(coa2, length)
@@ -674,7 +674,7 @@ Save data
 =========
 
 ```{r save_data}
-save(gbs, unal, coa, unmap, unalMap, tra, tra2, coa2, unmap2, wgo, longShort, file = "BreakPoints.Rdata")
+save(gbs, unal, coa, unmap, bri, tra, tra2, coa2, unmap2, wgo, longShort, file = "BreakPoints.Rdata")
 system("echo '9f273f099ecbfa44899b6c343d1382f1  BreakPoints.Rdata' | md5sum -c", intern = TRUE)
 ```
 
