--- a/vignettes/OrthogroupSyntenies.Rmd
+++ b/vignettes/OrthogroupSyntenies.Rmd
@@ -459,7 +459,7 @@ makeOxfordPlots(unlist(XSR_toPlot))
 Appears to be duplicated in Bar so missing from HOG `N19.HOG0000192` in that
 genome.
 
-```{r Hox4}
+```{r Hox4 dev=c("svg", "pdf", "png"), fig.ext=c("svg", "pdf", "png")}
 sapply(orthoPairs[1:15], \(gb) {
   x <- gb |> plyranges::filter(HOG == "N19.HOG0000192")
   if (length(x) == 0) return(NULL)
@@ -486,7 +486,7 @@ gbs$Oki_Osa |> plotApairOfChrs("chr2", xlim = gb2xlim(Hox4_4e4), annotations = a
 
 HOG `N19.HOG0000193`.
 
-```{r Hox1}
+```{r Hox1 dev=c("svg", "pdf", "png"), fig.ext=c("svg", "pdf", "png")}
 sapply(orthoPairs[1:15], \(gb) {
   x <- gb |> plyranges::filter(HOG == "N19.HOG0000193")
   if (length(x) == 0) return(NULL)
