re-add wilcox test

--- a/vignettes/RegionWidths.Rmd
+++ b/vignettes/RegionWidths.Rmd
@@ -177,7 +177,7 @@ wilcox_CI <- function(vector, conf.level){
 
 stats_to_compute <- list(n         = ~n(),
                          t_CI      = ~t_CI(., conf.level=0.95),
-                         #wilcox_CI = ~wilcox_CI(., conf.level=0.95),
+                         wilcox_CI = ~wilcox_CI(., conf.level=0.95),
                          min       = min,
                          q25       = ~quantile(., 0.25),
                          median    = median,
