--- a/vignettes/GenomicFeatures.Rmd
+++ b/vignettes/GenomicFeatures.Rmd
@@ -216,17 +216,31 @@ bp_pair_analysis(coa$Osa_Oki, coa$Osa_Aom, win = 1000, lab = "Oki~Aom") |> plotH
 
 ## Model operon areas
 
-```{r}
-op <- sort(genes(annots$Oki), ignore.strand=T)
-op <- trim(op + 200) |> suppressWarnings()
-# https://stackoverflow.com/questions/21421047
-# op$idx <- data.table::rleid(as.character(strand(op)))
-op$idx <- Rle(rep(seq_along(runValue(strand(op))), runLength(strand(op))))
-opL <- split(op, op$idx)
-operons <- unlist(endoapply(opL, reduce))
-op <- op - 200
-operons <- operons - 200
-operons <- operons[!operons %in% op]
+```{r guess_operons}
+calcOperons <- function(genes, window = 200) {
+  # Sort the genes ignoring strand.
+  g <- sort(genes, ignore.strand=T)
+  # Expand by `window` nucleotides (default 200)
+  g <- trim(g + window) |> suppressWarnings()
+  # Give a unique ID to all runs of successive genes on the same strand
+  # https://stackoverflow.com/questions/21421047
+  # op$idx <- data.table::rleid(as.character(strand(g)))
+  g$idx <- Rle(rep(seq_along(runValue(strand(g))), runLength(strand(g))))
+  # Split the genes by run ID
+  opL <- split(g, g$idx)
+  # Remove all runs of length one
+  opL <- opL[runLength(strand(g)) > 1]
+  # Merge into operons
+  operons   <- unlist(endoapply(opL, reduce))
+  # Removed un-merged genes
+  operons$n <- countOverlaps(operons, genes)
+  operons   <- operons[operons$n > 1]
+  operons
+}
+
+operons <- lapply(annots, \(a) {a |> genes() |> calcOperons() }) |> SimpleList()
+sapply(operons, length)
+sapply(operons, \(o) {table(o$n)})
 ```
 
 ## Accessory functions
