--- a/vignettes/GenomicFeatures.Rmd
+++ b/vignettes/GenomicFeatures.Rmd
@@ -221,7 +221,9 @@ calcOperons <- function(genes, window = 200) {
   # Sort the genes ignoring strand.
   g <- sort(genes, ignore.strand=T)
   # Expand by `window` nucleotides (default 200)
-  g <- trim(g + window) |> suppressWarnings()
+  # We suppress warnings because coordinates at the edges of seqfeatures can
+  # become transiently negative.
+  g <- (g + window) |> suppressWarnings()
   # Give a unique ID to all runs of successive genes on the same strand
   # https://stackoverflow.com/questions/21421047
   # op$idx <- data.table::rleid(as.character(strand(g)))
@@ -231,11 +233,12 @@ calcOperons <- function(genes, window = 200) {
   # Remove all runs of length one
   opL <- opL[runLength(strand(g)) > 1]
   # Merge into operons
-  operons   <- unlist(endoapply(opL, reduce))
+  operons   <- unlist(endoapply(opL, reduce)) |> suppressWarnings()
   # Removed un-merged genes
   operons$n <- countOverlaps(operons, genes)
   operons   <- operons[operons$n > 1]
-  operons
+  # Remove the flanking sequences
+  operons - window
 }
 
 operons <- lapply(annots, \(a) {a |> genes() |> calcOperons() }) |> SimpleList()
@@ -246,7 +249,7 @@ sapply(operons, \(o) {table(o$n)})
 ## Accessory functions
 
 ```{r genomic_features_byType_accessory_Functions}
-prepareFreqPlot <- function(gb, annot, rep, cne = NULL, tfbs = NULL, win = 1000) {
+prepareFreqPlot <- function(gb, annot, rep, cne = NULL, tfbs = NULL, operons = NULL, win = 1000) {
   l <- list()
   l$genes  <- feature_coverage(gb,     genes(annot),         win = win, lab = "genes",  direction = "left")
   #l$cds    <- feature_coverage(gb,     cds(annot),           win = win, lab = "CDS",    direction = "left")
@@ -257,6 +260,8 @@ prepareFreqPlot <- function(gb, annot, rep, cne = NULL, tfbs = NULL, win = 1000)
     l$CNE   <- feature_coverage(gb,    cne,                  win = win, lab = "CNE",    direction = "left")
   if (!is.null(tfbs))
     l$tfbs  <- feature_coverage(gb,    tfbs,                 win = win, lab = "TFBS",   direction = "left")
+  if (!is.null(operons))
+    l$operons<-feature_coverage(gb,    operons,              win = win, lab = "operons",direction = "left")
   #reorder
   newOrder <- order(rowSums(l$intron@image))
   l$intron@image <- l$intron@image[newOrder,]
@@ -300,8 +305,8 @@ depleted, which makes sense, as exons are usually mapable.  Within the mapped
 regions, frequency of introns and exons are comparable.  In contrary, within
 coalesced mapped regions, the exon annotations are over-represented.
 
-```{r genomic_features_byType}
-computePlotData <- function(target, query, CE=NULL, tfbs=NULL) {
+```{r genomic_features_byType, fig.width=15, fig.height=8, dev=c("svg", "pdf", "png"), fig.ext=c("svg", "pdf", "png")}
+computePlotData <- function(target, query, CE=NULL, tfbs=NULL, operons = NULL) {
   pair <- paste(target, query, sep = "_")
   current_GB_aln_nonCoa     <- gbs[[pair]][   gbs[[pair]]$nonCoa]
   current_GB_aln_coa        <- gbs[[pair]][ ! gbs[[pair]]$nonCoa]
@@ -313,15 +318,15 @@ computePlotData <- function(target, query, CE=NULL, tfbs=NULL) {
   targetGenome <- unique(genome(gbs[[pair]]))
   
   hmList <- SimpleList()
-  hmList$aln_nonCoa <- prepareFreqPlot(current_GB_aln_nonCoa, annots[[target]], reps[[targetGenome]], CE, tfbs)
-  hmList$aln_coa    <- prepareFreqPlot(current_GB_aln_coa,    annots[[target]], reps[[targetGenome]], CE, tfbs)
-  hmList$syn_block  <- prepareFreqPlot(current_GB_syn_block,  annots[[target]], reps[[targetGenome]], CE, tfbs)
-  hmList$unmap      <- prepareFreqPlot(current_GB_unmap,      annots[[target]], reps[[targetGenome]], CE, tfbs)
-  hmList$bri    <- prepareFreqPlot(current_GB_bri,    annots[[target]], reps[[targetGenome]], CE, tfbs)
+  hmList$aln_nonCoa <- prepareFreqPlot(current_GB_aln_nonCoa, annots[[target]], reps[[targetGenome]], CE, tfbs, operons[[target]])
+  hmList$aln_coa    <- prepareFreqPlot(current_GB_aln_coa,    annots[[target]], reps[[targetGenome]], CE, tfbs, operons[[target]])
+  hmList$syn_block  <- prepareFreqPlot(current_GB_syn_block,  annots[[target]], reps[[targetGenome]], CE, tfbs, operons[[target]])
+  hmList$unmap      <- prepareFreqPlot(current_GB_unmap,      annots[[target]], reps[[targetGenome]], CE, tfbs, operons[[target]])
+  hmList$bri        <- prepareFreqPlot(current_GB_bri,        annots[[target]], reps[[targetGenome]], CE, tfbs, operons[[target]])
   hmList
 }
 
-hmList_to_plot <- computePlotData("Oki", "Osa", ces$ce__50__48$Oki_Osa, tfbs)
+hmList_to_plot <- computePlotData("Oki", "Osa", ces$ce__50__48$Oki_Osa, tfbs, operons)
 
 (p_boundary <- rbind(
   hmList_to_plot$aln_nonCoa  |> prepareGGFreqPlot("01_isolated_alns"),
