--- a/vignettes/RegionWidths.Rmd
+++ b/vignettes/RegionWidths.Rmd
@@ -160,12 +160,10 @@ Below, I take the `widths_all_tibble` and perform some statistical operations on
 library(dplyr) |> suppressPackageStartupMessages()
 
 t_CI <- function(vector, conf.level){
-  if(length(vector) >= 3){
-    conf_test <- t.test(vector, conf.level = conf.level)
-    conf_str <- paste(round(conf_test$conf.int,2), collapse=',')
-  } else {
-    conf_str <- paste(NA_character_, ',', NA_character_, sep='')
-  }
+  if(length(vector) < 3)
+    return(NA_character_)
+  conf_test <- t.test(vector, conf.level = conf.level)
+  conf_str <- paste(round(conf_test$conf.int,2), collapse=',')
   conf_str
 }
 
@@ -173,12 +171,10 @@ t_CI <- function(vector, conf.level){
 # this test is computationally demanding for large data frames.
 # It works the same as the function above - just slower.
 wilcox_CI <- function(vector, conf.level){
-  if(length(vector) >= 3) {
-    conf_test <- wilcox.test(vector, conf.level = conf.level, conf.int = TRUE)
-    conf_str <- paste(round(conf_test$conf.int,2), collapse=',')
-  } else {
-    conf_str <- paste(NA_character_, ',', NA_character_, sep='')
-  }
+  if(length(vector) < 3)
+     return(NA_character_)
+  conf_test <- wilcox.test(vector, conf.level = conf.level, conf.int = TRUE)
+  conf_str <- paste(round(conf_test$conf.int, 2), collapse=',')
   conf_str
 }
 
