Move compound pictures in its own section.

--- a/vignettes/RegionWidths.Rmd
+++ b/vignettes/RegionWidths.Rmd
@@ -445,60 +445,6 @@ The short-width mapped peak is made of aligned regions that can not be coalesced
 We know from `vignette("RepeatRegions", package = "OikScrambling")` that these
 short mapped regions are not repeats.
 
-### Compound pictures
-
-Let's put into parallel "aligned", "unaligned" and "mapped"
-
-```{r compound1}
-p_ali <- gg_freq_poly(widths$gbs |> dplyr::filter(! is.na(genus))) +
-  aes(width, after_stat(density), col=class) + theme_bw() +
-  facet_wrap(~genus, scales = "free_y", ncol = 1) +
-  ggtitle("Aligned")
-
-p_una <- gg_freq_poly(widths$unal |> dplyr::filter(! is.na(genus))) +
-  aes(width, after_stat(density), col=class) + theme_bw() +
-  facet_wrap(~genus, scales = "free_y", ncol = 1) +
-  ggtitle("Not aligned")
-
-p_map <- gg_freq_poly(widths$coa |> dplyr::filter(! is.na(genus))) +
-  aes(width, after_stat(density), col=class) + theme_bw() +
-  facet_wrap(~genus, scales = "free_y", ncol = 1) +
-  ggtitle("Mapped")
-
-# Patchwork
-(p_ali | p_una | p_map) + plot_layout(ncol = 3, guides = 'collect') + theme_bw()
-```
-
-```{r compound2}
-p_ali2 <- gg_freq_poly(widths$gbs |> dplyr::filter(dist == "Oki – North", nonCoa)) +
-  aes(width, after_stat(density), col=name) + theme_bw() +
-  scale_x_log10(limits = c(1,5e5)) +
-  ggtitle("Isolated alignments")
-
-p_una2 <- gg_freq_poly(widths$unmap |> dplyr::filter(dist == "Oki – North")) +
-  aes(width, after_stat(density), col=name) + theme_bw() +
-  scale_x_log10(limits = c(1,5e5)) +
-  ggtitle("Not aligned, not mapped")
-
-p_syn2 <- gg_freq_poly(widths$coa |> dplyr::filter(dist == "Oki – North", !nonCoa)) +
-  aes(width, after_stat(density), col=name) + theme_bw() +
-  scale_x_log10(limits = c(1,5e5)) +
-  ggtitle("Synteny block")
-
-p_map2 <- gg_freq_poly(widths$gbs |> dplyr::filter(dist == "Oki – North", !nonCoa)) +
-  aes(width, after_stat(density), col=name) + theme_bw() +
-  scale_x_log10(limits = c(1,5e5)) +
-  ggtitle("Synteny alignment")
-
-p_unalmap2 <- gg_freq_poly(widths$bri |> dplyr::filter(dist == "Oki – North")) +
-  aes(width, after_stat(density), col=name) + theme_bw() +
-  scale_x_log10(limits = c(1,5e5)) +
-  ggtitle("Unaligned but syntenic")
-
-# Patchwork
-(p_ali2 | p_una2 | p_syn2 | p_map2 | p_unalmap2) + plot_layout(ncol = 5, guides = 'collect') + theme_bw()
-```
-
 ## Unmapped regions
 
 Unmapped regions are a bit longer on the short arm in Oki – North comparisons…
@@ -663,6 +609,61 @@ gg_freq_poly(widths$coa2 |> subset(chr %in% c("chr1", "chr2", "PAR"))) +
   geom_vline(xintercept = 500) +
   scale_x_log10("Width (vertical bar at 500 bp)")
 ```
+
+# Compound pictures
+
+Let's put into parallel "aligned", "unaligned" and "mapped"
+
+```{r compound1}
+p_ali <- gg_freq_poly(widths$gbs |> dplyr::filter(! is.na(genus))) +
+  aes(width, after_stat(density), col=class) + theme_bw() +
+  facet_wrap(~genus, scales = "free_y", ncol = 1) +
+  ggtitle("Aligned")
+
+p_una <- gg_freq_poly(widths$unal |> dplyr::filter(! is.na(genus))) +
+  aes(width, after_stat(density), col=class) + theme_bw() +
+  facet_wrap(~genus, scales = "free_y", ncol = 1) +
+  ggtitle("Not aligned")
+
+p_map <- gg_freq_poly(widths$coa |> dplyr::filter(! is.na(genus))) +
+  aes(width, after_stat(density), col=class) + theme_bw() +
+  facet_wrap(~genus, scales = "free_y", ncol = 1) +
+  ggtitle("Mapped")
+
+# Patchwork
+(p_ali | p_una | p_map) + plot_layout(ncol = 3, guides = 'collect') + theme_bw()
+```
+
+```{r compound2}
+p_ali2 <- gg_freq_poly(widths$gbs |> dplyr::filter(dist == "Oki – North", nonCoa)) +
+  aes(width, after_stat(density), col=name) + theme_bw() +
+  scale_x_log10(limits = c(1,5e5)) +
+  ggtitle("Isolated alignments")
+
+p_una2 <- gg_freq_poly(widths$unmap |> dplyr::filter(dist == "Oki – North")) +
+  aes(width, after_stat(density), col=name) + theme_bw() +
+  scale_x_log10(limits = c(1,5e5)) +
+  ggtitle("Not aligned, not mapped")
+
+p_syn2 <- gg_freq_poly(widths$coa |> dplyr::filter(dist == "Oki – North", !nonCoa)) +
+  aes(width, after_stat(density), col=name) + theme_bw() +
+  scale_x_log10(limits = c(1,5e5)) +
+  ggtitle("Synteny block")
+
+p_map2 <- gg_freq_poly(widths$gbs |> dplyr::filter(dist == "Oki – North", !nonCoa)) +
+  aes(width, after_stat(density), col=name) + theme_bw() +
+  scale_x_log10(limits = c(1,5e5)) +
+  ggtitle("Synteny alignment")
+
+p_unalmap2 <- gg_freq_poly(widths$bri |> dplyr::filter(dist == "Oki – North")) +
+  aes(width, after_stat(density), col=name) + theme_bw() +
+  scale_x_log10(limits = c(1,5e5)) +
+  ggtitle("Unaligned but syntenic")
+
+# Patchwork
+(p_ali2 | p_una2 | p_syn2 | p_map2 | p_unalmap2) + plot_layout(ncol = 5, guides = 'collect') + theme_bw()
+```
+
 
 # Paired comparison of widths in target and query genomes.
 
